learning/kube-ops-view/kube-ops-view.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-ops-view
  labels:
    app: kube-ops-view
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: kube-ops-view
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ops-view
  labels:
    app: kube-ops-view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ops-view
  template:
    metadata:
      labels:
        app: kube-ops-view
    spec:
      serviceAccountName: kube-ops-view
      containers:
      - name: kube-ops-view
        image: "hjacobs/kube-ops-view:19.9.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 80m
              memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kov.zircon.local
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: kov.zircon.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-ops-view
            port:
              number: 8080
